R4.6 pre-resume push

--- a/changelog.html
+++ b/changelog.html
@@ -73,9 +73,10 @@
 								</header>
 							</div>
 							<div class="6u$ 12u$(medium)">
-								<p><strong>Latest revision date: July 21st, 2016</strong>
-								<li>R4.5 - Updated and renamed about.html, adding to projects.html
-								<li>R4.5 - Cleaned up code, added content for About, Projects, and 61A.
+								<p><strong>Latest revision date: Oct. 3rd, 2016</strong>
+								<li>R4.6 - Internship search preparation and classes.html added.
+								<li>R4.5 - Updated and renamed about.html, adding to projects.html.
+								<li>R4.4 - Cleaned up code, added content for About, Projects, and 61A.
 								<li>R4.3 - Revised index.html, new footer layout, changelog.html added!</li>
 								<li>R4.2 - Ported to GitHub and hopefully this works better.</li>
 								<li>R4.1a - Custom error pages.</li>
@@ -107,7 +108,7 @@
 					</ul>
 					<ul class="copyright">
 						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
-            			<li><a href="changelog.html">R4.5</a>
+            			<li><a href="changelog.html">R4.6</a>
 						<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
