--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,6 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
-	Spatial by TEMPLATED
-	templated.co @templatedco
+	Spatial by TEMPLATED (templated.co, @templatedco)
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 	Modified and re-coding by Bryan Tong (btong.me) for personal use.
 -->
@@ -39,7 +38,7 @@
 						<!--<li><a href="http://blog.btong.me/">Blog</a></li>-->
 						<li><a href="about.html">About</a></li>
 						<li><a href="projects.html">Projects</a></li>
-						<li><a href="cv.html">CV</a></li>					
+						<li><a href="classes.html">Classes</a></li>				
 						<li><a href="index.html#contact">Contact</a></li>
 					</ul>
 				</nav>
@@ -56,6 +55,17 @@
 				<div class="container">
 					<header>
 						<h2>Current Projects</h2>
+						<!-- VR@B -->
+						<p>Virtual Reality @ Berkeley - AR Textbooks</p>
+						<a href="http://vr.berkeley.edu/"><img src="images/vrablogo.png" alt="VR@B Logo" /></a>
+					</header>
+						<p>I recently joined VR@B's project team for their augmented reality textbooks project.  We're using Unity and Google Cardboard to apply AR diagrams and interactions to traditional paper textbooks.  I'll be researching applications and implementing features to allows user to have more interactive freedom and a nicer interface and experience.
+						<br />
+                        <a href="https://www.youtube.com/watch?v=V0Pko38LDdw">AR Textbooks Video</a>
+                        <br />
+						<a href="http://vr.berkeley.edu/">VR@B Website</a></p>
+						
+                    <header>
 						<!-- Sunset -->
 						<p>Sunset Brawlers - Pixel Brawling Chaos</p>
 						<a href="http://sunset.btong.me/" class="image fit"><img src="images/projectSunset.png" alt="Sunset Project - Character Select Screen, made by Bryan Tong" /></a>
@@ -104,7 +114,7 @@
 				    -->
 					<ul class="copyright">
 						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
-            			<li><a href="changelog.html">R4.5</a>
+            			<li><a href="changelog.html">R4.6</a>
 						<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
