--- a/blog.html
+++ b/blog.html
@@ -37,8 +37,9 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<!--<li><a href="http://blog.btong.me/">Blog</a></li>-->
-						<li><a href="bio.html">About</a></li>
+						<li><a href="about.html">About</a></li>
 						<li><a href="projects.html">Projects</a></li>
+						<li><a href="classes.html">Classes</a></li>					
 						<li><a href="index.html#contact">Contact</a></li>
 					</ul>
 				</nav>
@@ -78,7 +79,7 @@
 				    -->
 					<ul class="copyright">
 						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
-            			<li><a href="changelog.html">R4.5</a>
+            			<li><a href="changelog.html">R4.6</a>
 						<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
