--- a/classes.html
+++ b/classes.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Spatial by TEMPLATED
-	templated.co @templatedco
+	Spatial by TEMPLATED (templated.co, @templatedco)
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 	Modified and re-coding by Bryan Tong (btong.me) for personal use.
 -->
@@ -39,7 +38,7 @@
 						<!--<li><a href="http://blog.btong.me/">Blog</a></li>-->
 						<li><a href="about.html">About</a></li>
 						<li><a href="projects.html">Projects</a></li>
-						<li><a href="cv.html">CV</a></li>					
+						<li><a href="classes.html">Classes</a></li>				
 						<li><a href="index.html#contact">Contact</a></li>
 					</ul>
 				</nav>
@@ -47,14 +46,14 @@
             
 		<!-- Banner -->
 			<section id="banner">
-				<h2>Curriculum Vitae</h2>
+				<h2>Classes Taken</h2>
 				<p>An informal list</p>
 			</section>
 
 		<!-- Main -->
 			<section id="main" class="wrapper">
 				<div class="container">
-                        <p><i>Preface: This is an informal list of my classes taken at Berkeley, and a timeline of my projects and notable mentions.  Also a major WIP.
+                        <p><i>Preface: This is an informal list of my classes taken at Berkeley for professional and educational reference.
                         </i></p>
 
 							<h4>Relevant Classes Taken</h4>
@@ -128,7 +127,7 @@
 				    -->
 					<ul class="copyright">
 						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
-            			<li><a href="changelog.html">R4.5</a>
+            			<li><a href="changelog.html">R4.6</a>
 						<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
