--- a/cs61a.html
+++ b/cs61a.html
@@ -39,7 +39,7 @@
 						<!--<li><a href="http://blog.btong.me/">Blog</a></li>-->
 						<li><a href="about.html">About</a></li>
 						<li><a href="projects.html">Projects</a></li>
-						<li><a href="cv.html">CV</a></li>					
+						<li><a href="classes.html">Classes</a></li>					
 						<li><a href="index.html#contact">Contact</a></li>
 					</ul>
 				</nav>
@@ -143,7 +143,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code>
 				    -->
 					<ul class="copyright">
 						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
-            			<li><a href="changelog.html">R4.5</a>
+            			<li><a href="changelog.html">R4.6</a>
 						<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
