--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE HTML>
 <!--
-	Spatial by TEMPLATED
-	templated.co @templatedco
+	Spatial by TEMPLATED (templated.co, @templatedco)
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
-	Modifications and additional code by Bryan Tong (btong.me).
+	Modified and re-coding by Bryan Tong (btong.me) for personal use.
 -->
 <html>
 	<head>
@@ -56,7 +55,7 @@
 						<!--<li><a href="http://blog.btong.me/">Blog</a></li>-->
 						<li><a href="about.html">About</a></li>
 						<li><a href="projects.html">Projects</a></li>
-						<li><a href="cv.html">CV</a></li>					
+						<li><a href="classes.html">Classes</a></li>				
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
@@ -256,7 +255,7 @@
 					</ul>
 					<ul class="copyright">
 						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
-            			<li><a href="changelog.html">R4.5</a>
+            			<li><a href="changelog.html">R4.6</a>
 						<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
