updated order of classes intended

--- a/classes.html
+++ b/classes.html
@@ -68,13 +68,18 @@
 									</thead>
 									<tbody>
 										<tr>
+											<td>CS 61C</td>
+											<td>Computer Architecture / Machine Structures</td>
+											<td>Fall 2018</td>
+										</tr>             
+										<tr>
 											<td>CS 188</td>
 											<td>Artificial Intelligence</td>
-											<td>Spring 2017</td>
+											<td>Fall 2018</td>
 										</tr>
 										<tr>
-											<td>CS 61C</td>
-											<td>Computer Architecture</td>
+											<td>CS 170</td>
+											<td>Efficient Algorithms and Intractable Problems</td>
 											<td>Spring 2017</td>
 										</tr>                                       	
                                         <tr>
