Fixed resize bug!

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>Bryan Tong</h2>
-				<p>CogSci Student at UC Berkeley<br />Designer, Coder, &amp; Entrepreneur</p>
+				<p class="class2">Studying CogSci at UC Berkeley</p>
+				<p>Designer, Coder, &amp; Entrepreneur</p>
 				<ul class="actions">
 					<li><a href="#about" class="button">Who?</a></li>
 				</ul>
