--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
 						</header>
 						<div class="feature-grid">
 							<div class="feature">
-								<div class="image rounded"><img src="images/pic04.jpg" alt="Bryan Tong - Consumer Technology"/></div>
+								<div class="image rounded"><img src="images/artextbooks.png" alt="Bryan Tong - VR and AR"/></div>
 								<div class="content">
 									<header>
-										<h4>Consumer Technology</h4>
-										<p>Sleek design and useful applications</p>
+										<h4>Virtual &amp; Augmented Reality</h4>
+										<p>A new medium of education and play</p>
 									</header>
-									<p>Innovative, trendy consumer technology is a massive interest for my career.  Ever since picking up my first PDA and touchscreen device, I have strived to be involved the field.</p>
+									<p>This semester, I joined Virtual Reality at Berkeley to work on their <a href="https://www.youtube.com/watch?v=V0Pko38LDdw">Augmented Reality Textbooks</a> project.  We're starting to refine this new, interactive medium of learning.</p>
 								</div>
 							</div>
 							<div class="feature">
@@ -123,7 +123,7 @@
 								</div>
 							</div>
 							<div class="feature">
-								<div class="image rounded"><img src="images/pic06.jpg" alt="Bryan Tong - Entertainment"/></div>
+								<div class="image rounded"><img src="images/sb.png" alt="Bryan Tong - Entertainment"/></div>
 								<div class="content">
 									<header>
 										<h4>Entertaining People</h4>
@@ -133,13 +133,13 @@
 								</div>
 							</div>
 							<div class="feature">
-								<div class="image rounded"><img src="images/pic07.jpg" alt="Bryan Tong - Investing"/></div>
+								<div class="image rounded"><img src="images/spexample.png" alt="Bryan Tong - VR and AR"/></div>
 								<div class="content">
 									<header>
-										<h4>Smart Investing</h4>
-										<p>Progress through investing</p>
+										<h4>Experimental Spotify Project</h4>
+										<p>Creating playlists by neural networks</p>
 									</header>
-									<p>Stocks, investments, and financial terms aren't unfamilar to this tech nerd.  At the age of 13, I began investing with a focus in tech - with the most successful portfolio doubling in a few years.</p>
+									<p>A collaboration project in the works - we're tailoring and applying neural networks to Spotify.  Ideally a web-app, it will passively learn from your preferences, explore songs, and buld new playlists.</p>
 								</div>
 							</div>
 						</div>
