--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 										<h4>Experimental Spotify Project</h4>
 										<p>Creating playlists by neural networks</p>
 									</header>
-									<p>A collaboration project in the works - we're tailoring and applying neural networks to Spotify.  Ideally a web-app, it will passively learn from your preferences, explore songs, and buld new playlists.</p>
+									<p>A collaboration project in the works - we're tailoring and applying neural networks to Spotify.  Ideally a web-app, it will passively learn from your preferences, explore songs, and build new playlists.</p>
 								</div>
 							</div>
 						</div>
