--- a/spotify.html
+++ b/spotify.html
@@ -58,7 +58,7 @@
 		<!-- Banner -->
 			<section id="spotid">
 				<h2>Spotify Project</h2>
-				<p>Spotify Song Suggestor by Neural Network Analysis</p>
+				<p>Spotify Song Suggester by Neural Network Analysis</p>
 			</section>
 
 		<!-- Main -->
@@ -66,7 +66,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>Coming Soon</h2>
-							<p>A smart, learning Spotify Song Suggestor<br />based on neural networks and data analysis.</p>
+							<p>A smart, learning Spotify Song Suggester<br />based on neural networks and data analysis.</p>
 							<img src="images/sdiagram.png" alt="Concept Flowchart" style="height: 75; width: 75%; object-fit: contain"/>
 						</header>
 						<ul class="actions">
