--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/png" />
-	  <link rel="shortcut icon" href="http://btong.me/favicon.png" type="image/x-icon">
+		<link rel="shortcut icon" href="/images/favicon.png" type="image/png" />
+		<link rel="shortcut icon" href="http://btong.me/favicon.png" type="image/x-icon">
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
@@ -22,33 +22,34 @@
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-xlarge.css" />
 		</noscript>
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Bryan Tong" />
-    <meta property="og:description" content="The personal homepage of Bryan Tong." />
-    <meta property="og:image" content="http://btong.me/images/favicon.png" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Bryan Tong" />
+		<meta property="og:description" content="The personal homepage of Bryan Tong." />
+		<meta property="og:image" content="http://btong.me/images/favicon.png" />
 		<script src="/google_analytics_auto.js"></script>
+		<script src='https://www.google.com/recaptcha/api.js'></script>
 	</head>
 	<body class="landing">
 		<!-- Header -->
 			<header id="header" class="alt">
-                <h1>
-                <script type="text/javascript">
-                    var d = new Date()
-                    var time = d.getHours()
-                    if (time<12)
-                      {
-                      document.write("Good morning!");
-                      }
-                    else if (time>=12 && time<18)
-                      {
-                      document.write("Good afternoon!");
-                      }
-                    else
-                      {
-                      document.write("Good evening!");
-                      }
-                    </script>
-                </h1>
+				<h1>
+				<script type="text/javascript">
+					var d = new Date()
+					var time = d.getHours()
+					if (time<12)
+					  {
+					  document.write("Good morning!");
+					  }
+					else if (time>=12 && time<18)
+					  {
+					  document.write("Good afternoon!");
+					  }
+					else
+					  {
+					  document.write("Good evening!");
+					  }
+					</script>
+				</h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -84,9 +85,9 @@
 							<div class="6u$ 12u$(medium)">
 								<p><i>Hey there!</i>
 								I'm Bryan, a Bay Area native and current student at the University of California, Berkeley, pursuing a degree in Cognitive Science with a focus in Human-Computer Interaction / AI.
-		                        Essentially, I'm hoping to learn a lot of computer science and psychology-related things before I pursue an eventual MBA.  Living and working in the local tech community is my dream, though I'd like to also run a boba cafe.
+								Essentially, I'm hoping to learn a lot of computer science and psychology-related things before I pursue an eventual MBA.  Living and working in the local tech community is my dream, though I'd like to also run a boba cafe.
 								</p>
-               					<ul class="actions">
+								<ul class="actions">
 									<li><a href="about.html" class="button alt">More Bio</a></li>
 								</ul>
 							</div>
@@ -156,41 +157,41 @@
 			<section id="contact" class="wrapper style3 special">
 					<div class="container 75%">
 						<div class="row 200%">
-                        	<!-- Left, info -->
+							<!-- Left, info -->
 							<div class="6u 12u$(medium)" style="color: white;">
 								<header class="major">
 									<h2>Get in touch</h2>
-                                    	<br/>
-                                        <h3 style="color: #B2B2B2;">Address</h3>
-                                            <span style="color: #B2B2B2;">
-                                            Berkeley, CA
-                                            USA</span>
-                                        <br />
-                                        <h3 style="color: #B2B2B2;">Email</h3>
-                                        	<a href="mailto:btong@berkeley.edu">btong@berkeley.edu</a>
-                                        <br />
+										<br/>
+										<h3 style="color: #B2B2B2;">Address</h3>
+											<span style="color: #B2B2B2;">
+											Berkeley, CA
+											USA</span>
+										<br />
+										<h3 style="color: #B2B2B2;">Email</h3>
+											<a href="mailto:btong@berkeley.edu">btong@berkeley.edu</a>
+										<br />
 
-                                </header>
-                                <p>Currently unavailable for contracting or tutoring.<br />
-                                Please contact for business inquiries or website topics!
-                                </p>
+								</header>
+								<p>Currently unavailable for contracting or tutoring.<br />
+								Please contact for business inquiries or website topics!
+								</p>
 
 							</div>
-                            <!-- Right, contact -->
+							<!-- Right, contact -->
 							<div class="6u$ 12u$(medium)">
-                                <p style="color: white;">
-                                Academic season - replies in 48 hours at the latest.<br />
-                                Contact form via <a href="http://formspree.io/">Formspree</a>.
-                                </p>
-                                <form action="http://formspree.io/btong@berkeley.edu" method="POST">
-                                    <div class="row uniform 50%">
-                                        <div class="6u 12u$(xsmall)">
-                                            <input name="name" placeholder="Name" type="text" />
-                                        </div>
-                                        <div class="6u$ 12u$(xsmall)">
-                                            <input name="email" placeholder="Email" type="email" />
-                                        </div>
-                                        <div class="12u$">
+								<p style="color: white;">
+								Academic season - replies in 48 hours at the latest.<br />
+								Contact form via <a href="http://formspree.io/">Formspree</a>.
+								</p>
+								<form action="http://formspree.io/btong@berkeley.edu" method="POST">
+									<div class="row uniform 50%">
+										<div class="6u 12u$(xsmall)">
+											<input name="name" placeholder="Name" type="text" />
+										</div>
+										<div class="6u$ 12u$(xsmall)">
+											<input name="email" placeholder="Email" type="email" />
+										</div>
+										<div class="12u$">
 											<div class="select-wrapper">
 												<select name="category" id="category">
 													<option value="">General</option>
@@ -201,19 +202,20 @@
 											</div>
 										</div>
 										<div class="12u$">
-                                            <textarea name="message" placeholder="Message" rows="4"></textarea>
-                                        </div>
-                                    </div>
-                                    <ul class="contact">
-                                        <li><input type="submit" class="special" value="Submit" /></li>
-                                    </ul>
-                                </form>
+											<textarea name="message" placeholder="Message" rows="4"></textarea>
+										</div>
+									</div>
+									<!-- <div class="g-recaptcha" data-sitekey="6LfQ9gkUAAAAALnMXsSu_dGojJPvS-UVBghCdFk2"></div> -->
+									<ul class="contact">
+										<li><input type="submit" class="special" value="Submit" /></li>
+									</ul>
+								</form>
 							</div>
 						</div>
 					</div>
 				</section>
 
-      <!-- Footer -->
+	  <!-- Footer -->
 			<footer id="footer">
 				<div class="container">
 					<!-- Temporarily Removed
@@ -221,16 +223,16 @@
 						<li><a href="#" class="icon fa-facebook"></a></li>
 						<li><a href="#" class="icon fa-twitter"></a></li>
 						<li><a href="#" class="icon fa-instagram"></a></li>
-            			<li><a href="#" class="icon fa-github"></a></li>
+						<li><a href="#" class="icon fa-github"></a></li>
 						<li><a href="https://www.linkedin.com/in/tongbryan" class="icon fa-linkedin"></a></li>
-				    </ul>
-				    -->
+					</ul>
+					-->
 					<ul class="copyright">
 						<li>Copyright &copy; 2016 Bryan Tong</li>
 					</ul>
 					<ul class="copyright">
 						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
-            			<li><a href="changelog.html">R4.6</a>
+						<li><a href="changelog.html">R4.6</a>
 						<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
