Updated classes for 2017.

--- a/classes.html
+++ b/classes.html
@@ -68,20 +68,25 @@
 									</thead>
 									<tbody>
 										<tr>
+											<td>What's next?</td>
+											<td>Something Interesting!</td>
+											<td>TBD</td>
+										</tr>
+										<tr>
+											<td>IB C32</td>
+											<td>Bio-Inspired Design</td>
+											<td>Spring 2017</td>
+										</tr> 
+										<tr>
 											<td>CS 61C</td>
 											<td>Computer Architecture / Machine Structures</td>
-											<td>Fall 2018</td>
+											<td>Spring 2017</td>
 										</tr>             
 										<tr>
 											<td>CS 188</td>
 											<td>Artificial Intelligence</td>
-											<td>Fall 2018</td>
-										</tr>
-										<tr>
-											<td>CS 170</td>
-											<td>Efficient Algorithms and Intractable Problems</td>
 											<td>Spring 2017</td>
-										</tr>                                       	
+										</tr>                                    	
                                         <tr>
 											<td>CS 198</td>
 											<td>Cryptocurrency</td>
