--- a/changelog.html
+++ b/changelog.html
@@ -29,89 +29,78 @@
 		<script src="/google_analytics_auto.js"></script>
 	</head>
 	<body class="landing">
+	
 		<!-- Header -->
-			<header id="header" class="alt">
-                <h1>
-                <script type="text/javascript">
-                    var d = new Date()
-                    var time = d.getHours()
-                    if (time<12)
-                      {
-                      document.write("Good morning!");
-                      }
-                    else if (time>=12 && time<18)
-                      {
-                      document.write("Good afternoon!");
-                      }
-                    else
-                      {
-                      document.write("Good evening!");
-                      }
-                    </script>
-                </h1>
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-					</ul>
-				</nav>
-			</header>
+		<header id="header" class="alt">
+            <h1>
+            <script type="text/javascript">
+                var d = new Date()
+                var time = d.getHours()
+                if (time < 12) {
+                	document.write("Good morning!");
+                } else if (time >= 12 && time < 18) {
+                	document.write("Good afternoon!");
+                } else {
+                	document.write("Good evening!");
+                }
+            </script>
+            </h1>
+			<nav id="nav">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+				</ul>
+			</nav>
+		</header>
 
 		<!-- Banner -->
-
-			<section id="banner">
-				<h2>btong.me changelog</h2>
-			</section>
+		<section id="banner">
+			<h2>btong.me changelog</h2>
+		</section>
 
 			<!-- About -->
-				<section id="about" class="wrapper style1">
-					<div class="container 75%">
-						<div class="row 200%">
-							<div class="6u 12u$(medium)">
-								<header class="major">
-									<h2>Changelog</h2>
-									<p>Records of my revisions<br />...Kinda</p>
-								</header>
-							</div>
-							<div class="6u$ 12u$(medium)">
-								<p><strong>Latest revision date: Oct. 3rd, 2016</strong>
-								<li>R4.6 - Internship search preparation and classes.html added.
-								<li>R4.5 - Updated and renamed about.html, adding to projects.html.
-								<li>R4.4 - Cleaned up code, added content for About, Projects, and 61A.
-								<li>R4.3 - Revised index.html, new footer layout, changelog.html added!</li>
-								<li>R4.2 - Ported to GitHub and hopefully this works better.</li>
-								<li>R4.1a - Custom error pages.</li>
-								<li>R4 - Nicer graphics, usable contact box.</li>
-								<li>R3 - First round of updated images, text, favicon.</li>
-								<li>R2 - Revised website to fit my personal use.</li>
-								</p>
-               	<ul class="actions">
-									<li><a href="index.html" class="button alt">Go to homepage</a></li>
-								</ul>
-							</div>
+			<section id="about" class="wrapper style1">
+				<div class="container 75%">
+					<div class="row 200%">
+						<div class="6u 12u$(medium)">
+							<header class="major">
+								<h2>Changelog</h2>
+								<p>Records of my revisions<br />...Kinda</p>
+							</header>
+						</div>
+						<div class="6u$ 12u$(medium)">
+							<p><strong>Latest revision date: Jan. 5th, 2017</strong>
+							<li>R4.7 - Adding more WIP pages, updated footers to 2017.
+							<li>R4.6 - Internship search preparation and classes.html added.
+							<li>R4.5 - Updated and renamed about.html, adding to projects.html.
+							<li>R4.4 - Cleaned up code, added content for About, Projects, and 61A.
+							<li>R4.3 - Revised index.html, new footer layout, changelog.html added!</li>
+							<li>R4.2 - Ported to GitHub and hopefully this works better.</li>
+							<li>R4.1a - Custom error pages.</li>
+							<li>R4 - Nicer graphics, usable contact box.</li>
+							<li>R3 - First round of updated images, text, favicon.</li>
+							<li>R2 - Revised website to fit my personal use.</li>
+							</p>
+           	<ul class="actions">
+								<li><a href="index.html" class="button alt">Go to homepage</a></li>
+							</ul>
 						</div>
 					</div>
-				</section>
+				</div>
+			</section>
 
-    	<!-- Footer -->
+       	<!-- Footer -->
 			<footer id="footer">
-				<!-- Temporarily Removed
-					<ul class="icons">
-						<li><a href="#" class="icon fa-facebook"></a></li>
-						<li><a href="#" class="icon fa-twitter"></a></li>
-						<li><a href="#" class="icon fa-instagram"></a></li>
-            			<li><a href="#" class="icon fa-github"></a></li>
-						<li><a href="https://www.linkedin.com/in/tongbryan" class="icon fa-linkedin"></a></li>
-				    </ul>
-				    -->
+				<div class="container">
 					<ul class="copyright">
-						<li>Copyright &copy; 2016 Bryan Tong</li>
+						<li>Copyright &copy; 2017 Bryan Tong</li>
 					</ul>
 					<ul class="copyright">
 						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
-            			<li><a href="changelog.html">R4.6</a>
+						<li><a href="changelog.html">R4.7</a>
 						<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
 			</footer>
+
 	</body>
 </html>
