Updated changelog detail.

--- a/changelog.html
+++ b/changelog.html
@@ -69,18 +69,23 @@
 						</div>
 						<div class="6u$ 12u$(medium)">
 							<p><strong>Latest revision date: Jan. 5th, 2017</strong>
-							<li>R4.7 - Adding more WIP pages, updated footers to 2017.
+							<li>R4.7 - Added a dropdown toolbar for "Tools" - random features
+							 I plan to add to gradually such as GPA calculator, bibliography generator,
+							 DnD Dice Roller, etc.
 							<li>R4.6 - Internship search preparation and classes.html added.
-							<li>R4.5 - Updated and renamed about.html, adding to projects.html.
-							<li>R4.4 - Cleaned up code, added content for About, Projects, and 61A.
+							<li>R4.5 - Updated and renamed about.html to feel more personal,
+							 adding to projects.html as of Summer 2016.
+							<li>R4.4 - Cleaned up code, added basic content to About, Projects, and 61A.
 							<li>R4.3 - Revised index.html, new footer layout, changelog.html added!</li>
 							<li>R4.2 - Ported to GitHub and hopefully this works better.</li>
-							<li>R4.1a - Custom error pages.</li>
-							<li>R4 - Nicer graphics, usable contact box.</li>
+							<li>R4.1a - Custom error pages got added for fun.</li>
+							<li>R4 - Nicer graphics, usable contact box implemented.</li>
 							<li>R3 - First round of updated images, text, favicon.</li>
-							<li>R2 - Revised website to fit my personal use.</li>
+							<li>R2 - Revised website to fit my personal use, 
+							using this beautiful new template to kickstart it.</li>
+							<li>R1 - Hello world!</li>
 							</p>
-           	<ul class="actions">
+           					<ul class="actions">
 								<li><a href="index.html" class="button alt">Go to homepage</a></li>
 							</ul>
 						</div>
