--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
 			<nav id="nav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<!--<li><a href="http://blog.btong.me/">Blog</a></li>-->
 					<li><a href="about.html">About</a></li>
 					<li><a href="projects.html">Projects</a></li>
 					<li><a href="classes.html">Classes</a></li>				
@@ -68,161 +67,152 @@
 			</ul>
 		</section>
 
-			<!-- About -->
-			<section id="about" class="wrapper style1">
-				<div class="container 75%">
-					<div class="row 200%">
-						<div class="6u 12u$(medium)">
-							<header class="major">
-								<h2>About Bryan</h2>
-								<p>A personal background</p>
+		<!-- About -->
+		<section id="about" class="wrapper style1">
+			<div class="container 75%">
+				<div class="row 200%">
+					<div class="6u 12u$(medium)">
+						<header class="major">
+							<h2>About Bryan</h2>
+							<p>A personal background</p>
+						</header>
+					</div>
+					<div class="6u$ 12u$(medium)">
+						<p><i>Hey there!</i>
+						I'm Bryan, a Bay Area native and current student at the University of California, Berkeley, pursuing a degree in Cognitive Science with a CS minor.
+						Essentially, I'm hoping to learn a lot of computer science, HCI/AI, and UX related-things before I pursue an eventual MBA.  Living and working in the local tech community is my dream, though I'd like to also run a boba cafe.
+						</p>
+						<ul class="actions">
+							<li><a href="about.html" class="button alt">More Bio</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- Interests -->
+		<section id="interests" class="wrapper style2">
+			<div class="container">
+				<header class="major special">
+					<h2>My Passions</h2>
+					<p>Current interests and projects</p>
+				</header>
+				<div class="feature-grid">
+					<div class="feature">
+						<div class="image rounded"><img src="images/artextbooks.png" alt="Bryan Tong - VR and AR"/></div>
+						<div class="content">
+							<header>
+								<h4>Virtual &amp; Augmented Reality</h4>
+								<p>A new medium of education and play</p>
 							</header>
+							<p>This semester, I joined Virtual Reality at Berkeley to work on their <a href="https://www.youtube.com/watch?v=V0Pko38LDdw">Augmented Reality Textbooks</a> project.  We're starting to refine this new, interactive medium of learning.</p>
 						</div>
-						<div class="6u$ 12u$(medium)">
-							<p><i>Hey there!</i>
-							I'm Bryan, a Bay Area native and current student at the University of California, Berkeley, pursuing a degree in Cognitive Science with a focus in Human-Computer Interaction / AI.
-							Essentially, I'm hoping to learn a lot of computer science and psychology-related things before I pursue an eventual MBA.  Living and working in the local tech community is my dream, though I'd like to also run a boba cafe.
-							</p>
-							<ul class="actions">
-								<li><a href="about.html" class="button alt">More Bio</a></li>
-							</ul>
+					</div>
+					<div class="feature">
+						<div class="image rounded"><img src="images/pic05.jpg" alt="Bryan Tong - Entrepreneur"/></div>
+						<div class="content">
+							<header>
+								<h4>Entrepreneurship &amp; Management</h4>
+								<p>Connected, understanding, efficient</p>
+							</header>
+							<p>When my dad lost his job during the recession, I gained my first taste of entrepreneurship.  My apparel startup quickly acquired international recognition with 5-figure revenue.</p>
+						</div>
+					</div>
+					<div class="feature">
+						<div class="image rounded"><img src="images/sb.png" alt="Bryan Tong - Entertainment"/></div>
+						<div class="content">
+							<header>
+								<h4>Entertaining People</h4>
+								<p>Creating friendships through tech</p>
+							</header>
+							<p>On the side, I channel my passion for video games into indie games and virtual reality.  Recently, I created a few educational games and <a href="http://sunset.btong.me/">Sunset Project</a> in collaboration with <a href="http://kitelion.me/">Kitelion Games</a>.</p>
+						</div>
+					</div>
+					<div class="feature">
+						<div class="image rounded"><img src="images/spexample.png" alt="Bryan Tong - VR and AR"/></div>
+						<div class="content">
+							<header>
+								<h4>Experimental Spotify Project</h4>
+								<p>Creating playlists by neural networks</p>
+							</header>
+							<p>A collaboration project in the works - we're tailoring and applying neural networks to Spotify.  Ideally a web-app, it will passively learn from your preferences, explore songs, and build new playlists.</p>
 						</div>
 					</div>
 				</div>
-			</section>
+				<section id="experience" class="wrapper style2 special">
+				    <ul class="actions">
+					    <li><a href="projects.html" class="button special big">Projects</a></li>
+					    <li><a href="/resume.pdf" class="button big">&nbsp; Résumé &nbsp;</a></li>
+				    </ul>
+		        </section>
+			</div>
+		</section>
 
-			<!-- Interests -->
-			<section id="interests" class="wrapper style2">
-				<div class="container">
-					<header class="major special">
-						<h2>My Passions</h2>
-						<p>Current interests and projects</p>
-					</header>
-					<div class="feature-grid">
-						<div class="feature">
-							<div class="image rounded"><img src="images/artextbooks.png" alt="Bryan Tong - VR and AR"/></div>
-							<div class="content">
-								<header>
-									<h4>Virtual &amp; Augmented Reality</h4>
-									<p>A new medium of education and play</p>
-								</header>
-								<p>This semester, I joined Virtual Reality at Berkeley to work on their <a href="https://www.youtube.com/watch?v=V0Pko38LDdw">Augmented Reality Textbooks</a> project.  We're starting to refine this new, interactive medium of learning.</p>
-							</div>
-						</div>
-						<div class="feature">
-							<div class="image rounded"><img src="images/pic05.jpg" alt="Bryan Tong - Entrepreneur"/></div>
-							<div class="content">
-								<header>
-									<h4>Entrepreneurship &amp; Management</h4>
-									<p>Connected, understanding, efficient</p>
-								</header>
-								<p>When my dad lost his job during the recession, I gained my first taste of entrepreneurship.  My apparel startup quickly acquired international recognition with 5-figure revenue.</p>
-							</div>
-						</div>
-						<div class="feature">
-							<div class="image rounded"><img src="images/sb.png" alt="Bryan Tong - Entertainment"/></div>
-							<div class="content">
-								<header>
-									<h4>Entertaining People</h4>
-									<p>Creating friendships through tech</p>
-								</header>
-								<p>On the side, I channel my passion for video games into indie games and virtual reality.  Recently, I created a few educational games and <a href="http://sunset.btong.me/">Sunset Project</a> in collaboration with <a href="http://kitelion.me/">Kitelion Games</a>.</p>
-							</div>
-						</div>
-						<div class="feature">
-							<div class="image rounded"><img src="images/spexample.png" alt="Bryan Tong - VR and AR"/></div>
-							<div class="content">
-								<header>
-									<h4>Experimental Spotify Project</h4>
-									<p>Creating playlists by neural networks</p>
-								</header>
-								<p>A collaboration project in the works - we're tailoring and applying neural networks to Spotify.  Ideally a web-app, it will passively learn from your preferences, explore songs, and build new playlists.</p>
-							</div>
-						</div>
+		<!-- Get in Touch -->
+		<section id="contact" class="wrapper style3 special">
+			<div class="container 75%">
+				<div class="row 200%">
+					<!-- Left, info -->
+					<div class="6u 12u$(medium)" style="color: white;">
+						<header class="major">
+							<h2>Get in touch</h2>
+								<br/>
+								<h3 style="color: #B2B2B2;">Address</h3>
+									<span style="color: #B2B2B2;">
+									Berkeley, CA
+									USA</span>
+								<br />
+								<h3 style="color: #B2B2B2;">Email</h3>
+									<a href="mailto:btong@berkeley.edu">btong@berkeley.edu</a>
+								<br />
+
+						</header>
+						<p>Currently unavailable for contracting or tutoring.<br />
+						Please contact for business inquiries or website topics!
+						</p>
+
 					</div>
-					<section id="experience" class="wrapper style2 special">
-					<ul class="actions">
-						<li><a href="projects.html" class="button special big">Projects</a></li>
-						<li><a href="/resume.pdf" class="button big">&nbsp; Résumé &nbsp;</a></li>
-					</ul>
-			</section>
-				</div>
-			</section>
-
-			<!-- Get in Touch -->
-			<section id="contact" class="wrapper style3 special">
-				<div class="container 75%">
-					<div class="row 200%">
-						<!-- Left, info -->
-						<div class="6u 12u$(medium)" style="color: white;">
-							<header class="major">
-								<h2>Get in touch</h2>
-									<br/>
-									<h3 style="color: #B2B2B2;">Address</h3>
-										<span style="color: #B2B2B2;">
-										Berkeley, CA
-										USA</span>
-									<br />
-									<h3 style="color: #B2B2B2;">Email</h3>
-										<a href="mailto:btong@berkeley.edu">btong@berkeley.edu</a>
-									<br />
-
-							</header>
-							<p>Currently unavailable for contracting or tutoring.<br />
-							Please contact for business inquiries or website topics!
-							</p>
-
-						</div>
-						<!-- Right, contact -->
-						<div class="6u$ 12u$(medium)">
-							<p style="color: white;">
-							Academic season - replies in 48 hours at the latest.<br />
-							Contact form via <a href="http://formspree.io/">Formspree</a>.
-							</p>
-							<form action="http://formspree.io/btong@berkeley.edu" method="POST">
-								<div class="row uniform 50%">
-									<div class="6u 12u$(xsmall)">
-										<input name="name" placeholder="Name" type="text" />
-									</div>
-									<div class="6u$ 12u$(xsmall)">
-										<input name="email" placeholder="Email" type="email" />
-									</div>
-									<div class="12u$">
-										<div class="select-wrapper">
-											<select name="category" id="category">
-												<option value="">General</option>
-												<option value="1">Business / Contracting</option>
-												<option value="1">Website Bug</option>
-												<option value="1">Sunset Project</option>
-											</select>
-										</div>
-									</div>
-									<div class="12u$">
-										<textarea name="message" placeholder="Message" rows="4"></textarea>
+					<!-- Right, contact -->
+					<div class="6u$ 12u$(medium)">
+						<p style="color: white;">
+						Academic season - replies in 48 hours at the latest.<br />
+						Contact form via <a href="http://formspree.io/">Formspree</a>.
+						</p>
+						<form action="http://formspree.io/btong@berkeley.edu" method="POST">
+							<div class="row uniform 50%">
+								<div class="6u 12u$(xsmall)">
+									<input name="name" placeholder="Name" type="text" />
+								</div>
+								<div class="6u$ 12u$(xsmall)">
+									<input name="email" placeholder="Email" type="email" />
+								</div>
+								<div class="12u$">
+									<div class="select-wrapper">
+										<select name="category" id="category">
+											<option value="">General</option>
+											<option value="1">Business / Contracting</option>
+											<option value="1">Website Bug</option>
+											<option value="1">Sunset Project</option>
+										</select>
 									</div>
 								</div>
-								<!-- <div class="g-recaptcha" data-sitekey="6LfQ9gkUAAAAALnMXsSu_dGojJPvS-UVBghCdFk2"></div> -->
-								<ul class="contact">
-									<li><input type="submit" class="special" value="Submit" /></li>
-								</ul>
-							</form>
-						</div>
+								<div class="12u$">
+									<textarea name="message" placeholder="Message" rows="4"></textarea>
+								</div>
+							</div>
+							<!-- <div class="g-recaptcha" data-sitekey="6LfQ9gkUAAAAALnMXsSu_dGojJPvS-UVBghCdFk2"></div> -->
+							<ul class="contact">
+								<li><input type="submit" class="special" value="Submit" /></li>
+							</ul>
+						</form>
 					</div>
 				</div>
-			</section>
+			</div>
+		</section>
 
 		<!-- Footer -->
 		<footer id="footer">
 			<div class="container">
-				<!-- Temporarily Removed
-				<ul class="icons">
-					<li><a href="#" class="icon fa-facebook"></a></li>
-					<li><a href="#" class="icon fa-twitter"></a></li>
-					<li><a href="#" class="icon fa-instagram"></a></li>
-					<li><a href="#" class="icon fa-github"></a></li>
-					<li><a href="https://www.linkedin.com/in/tongbryan" class="icon fa-linkedin"></a></li>
-				</ul>
-				-->
 				<ul class="copyright">
 					<li>Copyright &copy; 2017 Bryan Tong</li>
 				</ul>
