Updated topper, adding assets

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
+					<li><a href="classes.html">Classes</a></li>
 					<li><a href="projects.html">Projects</a></li>
-					<li><a href="classes.html">Classes</a></li>				
+					<li><a href="tools.html">Tools</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -202,7 +203,7 @@
 							</div>
 							<!-- <div class="g-recaptcha" data-sitekey="6LfQ9gkUAAAAALnMXsSu_dGojJPvS-UVBghCdFk2"></div> -->
 							<ul class="contact">
-								<li><input type="submit" class="special" value="Submit" /></li>
+								<li><input type="submit" class="button special small fit" value="Submit" /></li>
 							</ul>
 						</form>
 					</div>
@@ -218,6 +219,7 @@
 				</ul>
 				<ul class="copyright">
 					<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
+					<!--<li><a href="changelog.html" class="button alt small">R4.7</a></li>-->
 					<li><a href="changelog.html">R4.7</a>
 					<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
 				</ul>
