--- a/blog.html
+++ b/blog.html
@@ -36,11 +36,11 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<!--<li><a href="http://blog.btong.me/">Blog</a></li>-->
 						<li><a href="about.html">About</a></li>
+						<li><a href="classes.html">Classes</a></li>
 						<li><a href="projects.html">Projects</a></li>
-						<li><a href="classes.html">Classes</a></li>					
-						<li><a href="index.html#contact">Contact</a></li>
+						<li><a href="tools.html">Tools</a></li>
+						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
 			</header>
