--- a/spotify.html
+++ b/spotify.html
@@ -50,7 +50,12 @@
 				</h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="classes.html">Classes</a></li>
+					<li><a href="projects.html">Projects</a></li>
+					<li><a href="tools.html">Tools</a></li>
+					<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
 			</header>
