--- a/tools.html
+++ b/tools.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Spatial by TEMPLATED (templated.co, @templatedco)
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
@@ -43,87 +43,29 @@
 					</ul>
 				</nav>
 			</header>
-            
+
 		<!-- Banner -->
-			<section id="banner">
-				<h2>Classes Taken</h2>
-				<p>An informal list</p>
+			<section id="genericid">
+				<h2>Tools</h2>
+				<p>Various Tools and Resources I&apos;ve Made</p>
 			</section>
 
 		<!-- Main -->
 			<section id="main" class="wrapper">
 				<div class="container">
-                        <p><i>Preface: This is an informal list of my classes taken at Berkeley for professional and educational reference.
-                        </i></p>
+					<header>
+						<h2>Tabletop Game Dice Roller</h2>
+						<a href="dice.html" class="image fit"><img src="images/splashDice.png" alt="Dice Splash" /></a>
+					</header>
 
-							<h4>Relevant Classes Taken</h4>
-							<div class="table-wrapper">
-								<table>
-									<thead>
-										<tr>
-											<th>Course #</th>
-											<th>Title</th>
-											<th>Year</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td>What's next?</td>
-											<td>Something Interesting!</td>
-											<td>TBD</td>
-										</tr>
-										<tr>
-											<td>IB C32</td>
-											<td>Bio-Inspired Design</td>
-											<td>Spring 2017</td>
-										</tr> 
-										<tr>
-											<td>CS 61C</td>
-											<td>Computer Architecture / Machine Structures</td>
-											<td>Spring 2017</td>
-										</tr>             
-										<tr>
-											<td>CS 188</td>
-											<td>Artificial Intelligence</td>
-											<td>Spring 2017</td>
-										</tr>                                    	
-                                        <tr>
-											<td>CS 198</td>
-											<td>Cryptocurrency</td>
-											<td>Fall 2016</td>
-										</tr>
-                                        <tr>
-                                        	<td>CS 70</td>
-											<td>Discrete Mathematics and Probability Theory</td>
-											<td>Fall 2016</td>
-										</tr>
-                                        	<tr>
-											<td>CS 61B</td>
-											<td>Data Structures</td>
-											<td>Fall 2016</td>
-										</tr>
-                                        <tr>
-											<td>CS 61A</td>
-											<td>Structure and Interpretation of Computer Programs</td>
-											<td>Spring 2016</td>
-										</tr>
-                                        	<tr>
-											<td>MCB/Psych C64</td>
-											<td>Intro to Neuroscience</td>
-											<td>Fall 2015</td>
-										</tr>
-										<tr>
-											<td>CS 10</td>
-											<td>The Beauty and Joy of Computing</td>
-											<td>Fall 2015</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
+					<header>
+						<h2>Spotify Playlist Generator (Coming Soon)</h2>
+						<a href="spotify.html" class="image fit"><img src="images/splashSpotify.png" alt="Spotify Splash" /></a>
+					</header>
 				</div>
 			</section>
 
-	  <!-- Footer -->
+       	<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
 					<ul class="copyright">
