Adding dice.html skeleton (code still too messy for live), proper page title changing now

--- a/cs61a.html
+++ b/cs61a.html
@@ -138,7 +138,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code>
 					<ul class="copyright">
 						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
 						<li><a href="changelog.html">R4.7</a>
-						<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
+						<li>Theme: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
 			</footer>
