--- a/spotify.html
+++ b/spotify.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>btong.me | Bryan Tong</title>
+		<title>btong.me | S-NN</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -110,7 +110,7 @@
 					<ul class="copyright">
 						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
             			<li><a href="changelog.html">R4.7</a>
-						<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
+						<li>Theme: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
 			</footer>
