--- a/classes.html
+++ b/classes.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>btong.me | Bryan Tong</title>
+		<title>btong.me | Classes</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -22,8 +22,8 @@
 			<link rel="stylesheet" href="css/style-xlarge.css" />
 		</noscript>
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Bryan Tong" />
-        <meta property="og:description" content="The personal homepage of Bryan Tong." />
+        <meta property="og:title" content="Classes" />
+        <meta property="og:description" content="Classes - the personal homepage of Bryan Tong." />
         <meta property="og:image" content="http://btong.me/images/favicon.png" />
 		<script src="/google_analytics_auto.js"></script>
 	</head>
@@ -132,7 +132,7 @@
 					<ul class="copyright">
 						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
 						<li><a href="changelog.html">R4.7</a>
-						<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
+						<li>Theme: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
 			</footer>
