--- a/dice.html
+++ b/dice.html
@@ -1,12 +1,13 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <!--
-	Spatial by TEMPLATED (templated.co, @templatedco)
+	Spatial by TEMPLATED
+	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 	Modified and re-coding by Bryan Tong (btong.me) for personal use.
 -->
 <html>
 	<head>
-		<title>btong.me | Tools</title>
+		<title>btong.me | Dice Roller</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -22,8 +23,8 @@
 			<link rel="stylesheet" href="css/style-xlarge.css" />
 		</noscript>
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Tools" />
-        <meta property="og:description" content="Various tools and programs made by btong.me." />
+        <meta property="og:title" content="Dice Roller" />
+        <meta property="og:description" content="A sleek, modern dice roller by btong.me." />
         <meta property="og:image" content="http://btong.me/images/favicon.png" />
 		<script src="/google_analytics_auto.js"></script>
 	</head>
@@ -31,39 +32,46 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<h1><strong><a href="index.html">Bryan Tong</a></strong> (btong.me)</h1>
-				<nav id="nav">
+			    <h1>
+			    <script type="text/javascript">
+					var i = Math.floor((Math.random() * 9))
+                    var ar = new Array(10)
+					ar[0] = "Dare to test your luck?"
+					ar[1] = "Take a chance at the dice?"
+					ar[2] = "May the rolls be ever in your favor!"
+					ar[3] = "May the goddess of RNG smile upon you."
+					ar[4] = "I thought there was only one type of dice!?"
+					ar[5] = "Isn't a d100 a sphere anyway?"
+					ar[6] = "You better not re-roll!"
+					ar[7] = "Dungeon master knows all."
+					ar[8] = "20... 20... 20... drats, a 2!"
+					ar[9] = "What edition are we playing again?"
+                     document.write(ar[i]);
+                    </script>
+			    </script>
+			    </h1>				
+        		<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="classes.html">Classes</a></li>
-						<li><a href="projects.html">Projects</a></li>
-						<li><a href="tools.html">Tools</a></li>
-						<li><a href="#contact">Contact</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="classes.html">Classes</a></li>
+					<li><a href="projects.html">Projects</a></li>
+					<li><a href="tools.html">Tools</a></li>
+					<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
 			</header>
-
+            
 		<!-- Banner -->
-			<section id="genericid">
-				<h2>Tools</h2>
-				<p>Various Tools and Resources I&apos;ve Made</p>
+			<section id="diceid">
+				<h2>Dice Roller</h2>
+				<p>A simple, modern dice roller.</p>
 			</section>
 
 		<!-- Main -->
 			<section id="main" class="wrapper">
 				<div class="container">
-					<header>
-						<h2>Tabletop Game Dice Roller</h2>
-						<a href="dice.html" class="image fit"><img src="images/splashDice.png" alt="Dice Splash" /></a>
-					</header>
 
-					<header>
-						<h2>Spotify Playlist Generator (Coming Soon)</h2>
-						<a href="spotify.html" class="image fit"><img src="images/splashSpotify.png" alt="Spotify Splash" /></a>
-					</header>
-				</div>
-			</section>
 
        	<!-- Footer -->
 			<footer id="footer">
