--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 					<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
 					<!--<li><a href="changelog.html" class="button alt small">R4.7</a></li>-->
 					<li><a href="changelog.html">R4.7</a>
-					<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
+					<li>Theme: <a href="http://templated.co">TEMPLATED</a></li>
 				</ul>
 			</div>
 		</footer>
