--- a/dice.html
+++ b/dice.html
@@ -25,7 +25,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Dice Roller" />
         <meta property="og:description" content="A sleek, modern dice roller by btong.me." />
-        <meta property="og:image" content="http://btong.me/images/favicon.png" />
+        <meta property="og:image" content="http://btong.me/images/splashDice.png" />
 		<script src="/google_analytics_auto.js"></script>
 	</head>
 	<body class="landing">
@@ -72,6 +72,7 @@
 			<section id="main" class="wrapper">
 				<div class="container">
 
+					
 
 					<form method="post" action="" name="diceform">
 					<body onload="reset()">
