Updated classes for Spring 2017 semester

--- a/classes.html
+++ b/classes.html
@@ -73,6 +73,16 @@
 											<td>TBD</td>
 										</tr>
 										<tr>
+											<td>CS 188</td>
+											<td>Artificial Intelligence</td>
+											<td>Fall 2017</td>
+										</tr> 
+										<tr>
+											<td>CS 168</td>
+											<td>Internet Architecture and Protocols</td>
+											<td>Fall 2017</td>
+										</tr> 
+										<tr>
 											<td>IB C32</td>
 											<td>Bio-Inspired Design</td>
 											<td>Spring 2017</td>
@@ -83,8 +93,8 @@
 											<td>Spring 2017</td>
 										</tr>             
 										<tr>
-											<td>CS 188</td>
-											<td>Artificial Intelligence</td>
+											<td>MIT 18.06</td>
+											<td>Linear Algebra</td>
 											<td>Spring 2017</td>
 										</tr>                                    	
                                         <tr>
