--- a/classes.html
+++ b/classes.html
@@ -86,7 +86,12 @@
 											<td>IB C32</td>
 											<td>Bio-Inspired Design</td>
 											<td>Spring 2017</td>
-										</tr> 
+										</tr>
+										<tr>
+											<td>CS 198-S17</td>
+											<td>iOS / Swift</td>
+											<td>Spring 2017</td>
+										</tr>  
 										<tr>
 											<td>CS 61C</td>
 											<td>Computer Architecture / Machine Structures</td>
