--- a/projects.html
+++ b/projects.html
@@ -59,10 +59,8 @@
 						<p>Virtual Reality @ Berkeley - AR Textbooks</p>
 						<a href="http://vr.berkeley.edu/"><img src="images/vrablogo.png" alt="VR@B Logo" /></a>
 					</header>
-						<p>The above is an actual working screenshot!
-
-						I've been workng on VR@B's augmented reality textbooks project for the past year now.  We're using Unity and Google Cardboard to apply 3D diagrams and interactions to traditional paper textbooks via an affordable, compact AR interface.  Anyone can download the .apk to their phone, slide it into a Cardboard, and stare away!
-
+						<p>The above is an actual working screenshot!<br />
+						I've been workng on VR@B's augmented reality textbooks project for the past year now.  We're using Unity and Google Cardboard to apply 3D diagrams and interactions to traditional paper textbooks via an affordable, compact AR interface.  Anyone can download the .apk to their phone, slide it into a Cardboard, and stare away!<br />
 						Last semester, I focused on implementing animations, smoother 3D model tracking, and universal autofocus code.  This semester, I'm tackling cross-platform compatability, shared-session networking, UI, and team management before becoming the next team lead.
 						<br />
                         <a href="https://www.youtube.com/watch?v=V0Pko38LDdw">AR Textbooks Video</a>
