--- a/dice.html
+++ b/dice.html
@@ -6,7 +6,9 @@
 	Modified and re-coding by Bryan Tong (btong.me) for personal use.
 	~#~#~#~#~
 	Inspired by WotC Dice Roller, if this looks familar.
-	Code is original, but layout should be familiar (thanks to deprecated tables).
+	TEMPORARY using WotC Code to make sure tables work,
+	and rehosting for friends while theirs is down.
+	WILL REMOVE/REPLACE WITH ORIGINAL CODE SHORTLY:
 	Contact me if there are any issues.
 
 -->
