--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 					</div>
 					<div class="6u$ 12u$(medium)">
 						<p><i>Hey there!</i>
-						I'm Bryan, a Bay Area native and current student at the University of California, Berkeley, pursuing a degree in Cognitive Science with a CS minor.
-						Essentially, I'm hoping to learn a lot of computer science, HCI/AI, and UX related-things before I pursue an eventual MBA.  Living and working in the local tech community is my dream, though I'd like to also run a boba cafe.
+						I'm Bryan, a Bay Area native and current student at the University of California, Berkeley, pursuing a degree in Cognitive Science with an EECS minor.
+						Essentially, I'm learning a lot of computer science, HCI/AI, hardware, and UX related-things before I pursue an MBA to couple it with.  Living and working in the local tech community is my dream, though I'd like to also run a boba cafe.
 						</p>
 						<ul class="actions">
 							<li><a href="about.html" class="button alt">More Bio</a></li>
