--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
                     <p><i>Hey there!</i></p>
                     <p><strong>My Background</strong><br />
 			        I'm Bryan, a Bay Area native and current student at the University of California, Berkeley.
-                    I'm pursuing a major in Cognitive Science, focused in Human-Computer interaction, and a minor in Computer Science.
+                    I'm pursuing a major in Cognitive Science, focused in HCI and Computational Modeling, and a minor in Electrical Engineering and Computer Science (whew).
                     Basically, I'm hoping to learn a blend of computer science, HCI/AI, and UX topics before I pursue an eventual MBA.  Living and working in the local tech community is my dream, though I'd like to also run a boba cafe..</p>
                     <a href="#" class="image fit"><img src="images/pic01.png" alt="Some photos of me!"/></a> 
                     <p>
